turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:9: error: unclosed quoted identifier
val `left = 2
    ^Turmite:11: error: unclosed quoted identifier
val `right = 8
    ^Turmite:9: error: illegal start of simple pattern
val `left = 2
    ^Turmite:11: error: '=' expected but ';' found.
val `right = 8
^Turmite:11: error: illegal start of simple pattern
val `right = 8
    ^Turmite:14: error: '=' expected but ';' found.
var mvt = 0
^